fixed clipping

--- a/css/main.scss
+++ b/css/main.scss
@@ -140,6 +140,8 @@ h5 {
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+  padding-top: 5px;
+  padding-bottom: 5px;
 
   .logo {
     font-size: 1rem;
@@ -198,12 +200,12 @@ h5 {
     align-items: center;
 
     a {
-      margin-left: 0.5rem;
+      margin-left: 1rem;
       padding: 0.1rem;
 
       img {
-        width: 24px;
-        height: 24px;
+        width: 28px;
+        height: 28px;
 
         @include sm {
           transform: scale(1.3);
@@ -259,7 +261,7 @@ h5 {
   background: transparent;
   outline: 0;
   right: 20px;
-  top: 1px;
+  top: 5px;
   cursor: pointer;
   border-radius: 50%;
   transition: background-color 0.15s linear;
